Remove padding on smaller screens for certain pages, fix height of content so that it never overlaps with footer

--- a/_sass/components/_grid.scss
+++ b/_sass/components/_grid.scss
@@ -31,7 +31,9 @@ body[class*="faq"],
 body[class*="science"] {
     .content-box {
         .content-inner {
-            padding-top: 5rem;
+            @media (min-width: 1200px) {
+                padding-top: 5rem;
+            }
         }
     }
 }
